@@ -32,22 +32,28 @@ on 'develop' => sub {
   requires "Dist::Zilla::Plugin::UsefulReadme" => "v0.4.3";
   requires "Pod::Coverage::TrustPod" => "0";
   requires "Pod::Markdown::Github" => "0";
+  requires "Pod::Wordlist" => "0";
   requires "Software::Security::Policy::Individual" => "0.10";
+  requires "Test2::Require::AuthorTesting" => "0";
   requires "Test2::Tools::Basic" => "1.302200";
-  requires "Test::CPAN::Changes" => "0";
-  requires "Test::CVE" => "0.08";
+  requires "Test2::V0" => "0";
+  requires "Test::CPAN::Changes" => "0.19";
+  requires "Test::CVE" => "0.10";
   requires "Test::EOF" => "0";
   requires "Test::EOL" => "0";
+  requires "Test::Fixme" => "0";
   requires "Test::Kwalitee" => "1.21";
   requires "Test::MinimumVersion" => "0";
   requires "Test::MixedScripts" => "v0.3.0";
-  requires "Test::More" => "0.88";
+  requires "Test::Mojibake" => "0";
+  requires "Test::More" => "0.96";
   requires "Test::NoTabs" => "0";
   requires "Test::Perl::Critic" => "0";
   requires "Test::Pod" => "1.41";
   requires "Test::Pod::Coverage" => "1.08";
-  requires "Test::Pod::LinkCheck" => "0";
+  requires "Test::Pod::No404s" => "0";
   requires "Test::Portability::Files" => "0";
+  requires "Test::Spelling" => "0.17";
   requires "Test::TrailingSpace" => "0.0203";
   requires "Test::Vars" => "0.015";
 };
