@@ -32,7 +32,6 @@ timeframe = 2 weeks
 git_url = https://github.com/robrwo/perl-Crypt-URandom-MonkeyPatch
 report_url = https://github.com/robrwo/perl-Crypt-URandom-MonkeyPatch/security/advisories
 [License]
-[ExtraTests]
 [ExecDir]
 [ShareDir]
 [MakeMaker]
@@ -40,6 +39,7 @@ report_url = https://github.com/robrwo/perl-Crypt-URandom-MonkeyPatch/security/a
 [CheckSelfDependency]
 [Signature]
 [TestRelease]
+[CheckExtraTests]
 [ConfirmRelease]
 [UploadToCPAN]
 
@@ -112,10 +112,10 @@ x_authority = cpan:RRWO
 [Test::MinimumVersion]
 [Test::NoTabs]
 [Test::Perl::Critic]
-critic_config = t/etc/perlcritic.rc
+critic_config = xt/etc/perlcritic.rc
 
 [Test::Pod::Coverage::Configurable]
-[Test::Pod::LinkCheck]
+[Test::Pod::No404s]
 [Test::Portability]
 ; authordep Test::TrailingSpace
 [Test::TrailingSpace]
@@ -127,7 +127,18 @@ skiptest = use_strict
 version_extractor = Module::Metadata
 verify_prereqs = 1
 
+[Test::PodSpelling]
+
+[MojibakeTests]
+
 [Test::MixedScripts]
+; authordep Test::MixedScripts
+
+[Test::CPAN::Changes]
+; authordep Test::CPAN::Changes
+
+[Test::UnusedVars]
+[Test::CVE]
 
 [@Git]
 allow_dirty = dist.ini
