@@ -1,17 +1,0 @@
-#!perl
-
-use strict;
-use warnings;
-
-BEGIN {
-  unless ($ENV{AUTHOR_TESTING}) {
-    print qq{1..0 # SKIP these tests are for testing by the author\n};
-    exit
-  }
-}
-
-use Test::More;
-
-eval "use Test::Vars 0.015";
-
-all_vars_ok();
