@@ -13,7 +13,9 @@ Revision history for {{ $dist->name }}:
   - Renamed BUGS to SUPPORT and documented supported versions.
 
   [Tests]
-  - Added more author tests.
+  - Added and updated author tests.
+
+  - Moved author tests into the `xt` directory.
 
   - Added missing development prerequisite.
 
